# mood

./: .dockerignore  Makefile  README.md  docker-compose.yml  mood.code-workspace
llm-service/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
llm-service/app/api/: routes.py
llm-service/app/core/: config.py
llm-service/app/models/: llm.py  prompt.py  song.py
llm-service/app/prompts/: __init__.py  song_recommendations.py
llm-service/app/services/: llm_service.py  recommendation_service.py
llm-service/llm_service/api/: __init__.py  router.py  routes.py
llm-service/llm_service/api/routes/: recommend.py
llm-service/llm_service/core/: __init__.py  config.py
llm-service/llm_service/models/: llm.py  prompt.py  recommendations.py  song.py
llm-service/llm_service/prompts/: song_recommendations.py
llm-service/llm_service/services/: __init__.py  llm_service.py  recommendation_service.py
llm-service/llm_service/utils/: __init__.py  error_handlers.py
llm-service/src/: app.ts  models.ts
llm-service/src/services/: llm.service.ts
llm-service/test/: README.md  requirements.txt
llm-service/test/app/: __init__.py
llm-service/test/app/api/: routes.py
llm-service/test/app/core/: config.py
llm-service/test/app/models/: __init__.py  song.py
llm-service/test/app/prompts/: song_recommendations.py
mood-backend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  jest.config.json  main.py  nodemon.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
mood-backend/mood_backend/: __init__.py
mood-backend/mood_backend/api/: router.py
mood-backend/mood_backend/core/: config.py
mood-backend/mood_backend/models/: playlist.py  spotify.py
mood-backend/mood_backend/services/: playlist_service.py  recommendation_service.py  scheduler_service.py  spotify_service.py
mood-backend/mood_backend/tests/: conftest.py
mood-backend/src/: app.ts  config.ts  index.ts
mood-backend/src/config/: spotify.config.ts
mood-backend/src/controllers/: hello-world-controller.ts  hello-world.controller.ts  spotify.controller.ts
mood-backend/src/routes/: hello-world.routes.ts  hello-world.ts  spotify.routes.ts
mood-backend/src/services/: spotify.service.ts
mood-backend/tests/: hello-world.spec.ts
mood-frontend/: Dockerfile  (+6 more)
(+43 files in other folders)
